# OverGuard

./: .gitignore  README.md  temp.json
.git-rewrite/: backup-refs  commit  index  message  parse  revs
backend/: CMakeLists.txt  run.sh
backend/.cache/clangd/index/: API_Handler.cpp.07CBB668EDD9B23D.idx  API_Handler.h.CE71A93522A32544.idx  Database_Operations.cpp.F278AEC221110197.idx  Database_Operations.h.62EA2A840FAD7794.idx  Heroes.cpp.F4A3ACDB250CA278.idx  Heroes.h.E671CE598DED7610.idx  Json_Serializer.cpp.95C1F6FEB103C6B3.idx  Json_Serializer.h.B0D7903C0ED700ED.idx  crow_all.h.9DF2243E40C2906D.idx  main.cpp.3586FB4EA8A81765.idx  sqlite3.c.B9563E8C61BFA4F7.idx  sqlite3.h.4C16E2FB5B472828.idx
backend/databases/: ashe.db  baptiste.db  cassidy.db  hanzo.db  player_ids.txt  players  players-journal  players.db  sojourn.db  soldier76.db  tracer.db  widowmaker.db
backend/include/: APIHandler.h  API_Handler.h  Crow_Routes.h  Database_Operations.h  Heroes.h  JsonSerializer.h  Json_Serializer.h
backend/src/: APIHandler.cpp  API_Handler.cpp  Crow_Routes.cpp  Database_Operations.cpp  Heroes.cpp  JsonSerializer.cpp  Json_Serializer.cpp  Makefile  a.out  main.cpp  test  test.cpp
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/.parcel-cache/: 1f001fb4737dbef6  6054c31dbe703fb9-BundleGraph-0  7f973df67467291d-AssetGraph-0  a7ee6c40ab3a2e0e  a8a28560cabca33b-AssetGraph-0  d0d4aa4a0c5416be-AssetGraph-0  lock.mdb  requestGraph-8b272c8491111040-0  requestGraph-nodes-0-8b272c8491111040-0  snapshot-8b272c8491111040.txt  snapshot-90119cf973c747f0.txt
frontend/css/: style.css
frontend/src/: api.js  charts.js  hero_objects.js  main.js
